Fixed: lr-fs-bottom-wrap overflow bug

--- a/src/css/sys-app/fs.scss
+++ b/src/css/sys-app/fs.scss
@@ -3,6 +3,7 @@
 .lr-fs-bottom-wrap{
   flex-grow: 1;
   display: flex;
+  overflow: auto;
 }
 
 .lr-fs-right{
